--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Django
 *.log
 *.pot
@@ -7,6 +6,8 @@ __pycache__/
 db.sqlite3
 media/
 uploads/
+
+# Environments
 .env
 .venv
 env/
@@ -15,48 +16,31 @@ ENV/
 env.bak/
 venv.bak/
 python_env/
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-.DS_Store
-Thumbs.db
-*.tmp
-*.temp
-cat > .gitignore << 'EOF'
 
-# Django
-*.log
-*.pot
-*.pyc
-__pycache__/
-db.sqlite3
-media/
-uploads/
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-python_env/
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# OS
 .DS_Store
 Thumbs.db
+
+# Temp files
 *.tmp
 *.temp
 
+# Local settings
 local_settings.py
 settings_local.py
+
+# Coverage reports
+htmlcov/
 .coverage
 .coverage.*
-.coverage
-*,cover
+*.cover
 
-.vscode/
+# Jupyter Notebook
+.ipynb_checkpoints
